Fix scrollbar

--- a/src/app/dashboard/widget-modal/add-widget-modal/add-widget-modal.component.scss
+++ b/src/app/dashboard/widget-modal/add-widget-modal/add-widget-modal.component.scss
@@ -27,3 +27,6 @@
 .height-container {
   height: calc(100% - 40px) !important;
 }
+::ng-deep .mat-dialog-container {
+  padding: 20px !important;
+}
